# chess-rs

./: Cargo.toml  README.md  build.rs
frontend/: package-lock.json  package.json
frontend/src/: App.jsx  GameBoard.jsx
frontend/src/pages/: Home.jsx
src/: chess.rs  cli.rs  main.rs  web.rs
src/chess/: chess_piece.rs  chess_vec.rs  mod.rs  test_chess.rs
