[package]
name = "chess-rs"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
axum = { version = "0.7.7", features = ["ws"] }
clap = "4.5.21"
tokio = { version = "1.41.1", features = ["full"] }
tower-http = { version = "0.6.1", features = ["fs", "trace"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
